--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 anyio==3.4.0
 asgiref==3.4.1
+bcrypt==3.2.0
 black==21.12b0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
 dnspython==2.1.0
+ecdsa==0.17.0
 email-validator==1.1.3
 fastapi==0.70.0
 greenlet==1.1.2
@@ -17,14 +20,19 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 orjson==3.6.5
+passlib==1.7.4
 pathspec==0.9.0
 platformdirs==2.4.0
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.8.2
 pyhumps==3.5.0
 python-dotenv==0.19.2
+python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==5.4.1
 requests==2.26.0
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.28
