--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ orjson==3.6.5
 passlib==1.7.4
 pathspec==0.9.0
 platformdirs==2.4.0
+psycopg2==2.9.3
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.8.2
