--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cffi==1.15.0
 charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
+cryptography==36.0.1
 dnspython==2.1.0
 ecdsa==0.17.0
 email-validator==1.1.3
