--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiosqlite==0.17.0
 anyio==3.4.0
 asgiref==3.4.1
+atomicwrites==1.4.0
+attrs==21.4.0
 bcrypt==3.2.0
 black==21.12b0
 certifi==2021.10.8
@@ -17,19 +19,25 @@ greenlet==1.1.2
 h11==0.12.0
 httptools==0.2.0
 idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 orjson==3.6.5
+packaging==21.3
 passlib==1.7.4
 pathspec==0.9.0
 platformdirs==2.4.0
+pluggy==1.0.0
 psycopg2==2.9.3
+py==1.11.0
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.8.2
 pyhumps==3.5.0
+pyparsing==3.0.7
+pytest==7.1.1
 python-dotenv==0.19.2
 python-jose==3.3.0
 python-multipart==0.0.5
